update modal WiFi

--- a/src/app/pages/wifi/wifi.component.html
+++ b/src/app/pages/wifi/wifi.component.html
@@ -9,9 +9,9 @@
                     <button type="button" pButton icon="fa fa-plus" (click)="showDialogToAdd()" label="Add"></button>
 
                 
-                        <button type="button" pButton icon="pi pi-file-excel" iconPos="left" label="EXCEL" (click)="exportExcel()" style="margin-left: 15px;" class="ui-button-success"></button>
+                        <button type="button" pButton icon="pi pi-file-excel" iconPos="left" label="EXCEL" (click)="exportExcel()" style="margin-left: 15px; margin-bottom: 15px; margin-right: 15px;" class="ui-button-success"></button>
         
-                        <input pInputText type="text" placeholder="Mã WiFi" style="margin-left: 15px; height: 30px; margin-bottom: 15px;"  (input)="tt.filter($event.target.value, 'mawifi', 'contains')">
+                        <input pInputText type="text" placeholder="Mã WiFi" style=" height: 30px; margin-bottom: 15px;"  (input)="tt.filter($event.target.value, 'mawifi', 'contains')">
            
                 </div>
                 </div>
@@ -123,8 +123,31 @@
                             </ng-template>
                         </p-table>
 
-                        <p-dialog header="WiFi" [(visible)]="displayDialog" [focusOnShow]="false" [responsive]="true"
-                            showEffect="fade" [modal]="true" [style]="{width: '400px'}" [formGroup]="wifiform">
+                        <!-- <p-dialog header="WiFi" [(visible)]="displayDialog" [focusOnShow]="false" [responsive]="true"
+                            showEffect="fade" [modal]="true" style="display: block; width: 300px; visibility: visible; left: 49.5px; top: 227px; z-index: 1004;" [style]="{width: '400px'}" [formGroup]="wifiform">
+
+                            <label style="margin-top: 10px;"> Mã WiFi</label> <label style="color: #ec250d;"> *</label>
+                            <input class=" form-control" placeholder="Mã WiFi" type="text" formControlName="mawifi" />
+                            <label style="margin-top: 10px;"> SDT SIM</label> <label style="color: #ec250d;"> *</label>
+                            <input class=" form-control" placeholder="SDT SIM" type="text" formControlName="sdtsim" />
+                            <label style="margin-top: 10px;"> Mã SIM</label> <label style="color: #ec250d;"> *</label>
+                            <input class=" form-control" placeholder="Mã SIM" type="text" formControlName="masim" />
+                            <p-footer>
+                                <div class="ui-dialog-buttonpane ui-helper-clearfix">
+
+                                    <button type="button" pButton (click)="save()" label="Save"></button>
+                                    <button type="button" pButton (click)="cancel()" label="Cancel"
+                                        style="background:rgba(224, 46, 22, 0.6)"></button>
+                                </div>
+                            </p-footer>
+
+                        </p-dialog> -->
+                    </div>
+                </div>
+            </div>
+
+            <p-dialog header="WiFi" [(visible)]="displayDialog" [focusOnShow]="false" [responsive]="true"
+                            showEffect="fade" [modal]="true" style="display: block; width: 300px; visibility: visible; left: 49.5px; top: 227px; z-index: 1004;" [style]="{width: '400px'}" [formGroup]="wifiform">
 
                             <label style="margin-top: 10px;"> Mã WiFi</label> <label style="color: #ec250d;"> *</label>
                             <input class=" form-control" placeholder="Mã WiFi" type="text" formControlName="mawifi" />
@@ -142,9 +165,6 @@
                             </p-footer>
 
                         </p-dialog>
-                    </div>
-                </div>
-            </div>
         </div>
 
     </div>
