--- a/src/app/pages/rtl/rtl.component.html
+++ b/src/app/pages/rtl/rtl.component.html
@@ -5,8 +5,9 @@
       <div class=" card">
         <div class=" card-header">
           <h4 class=" card-title">Danh Sách KH Trả Lại</h4>
+          <br/>
           <div style="text-align: left;margin-top: 15px;">  
-            <button type="button" pButton icon="pi pi-file-excel" iconPos="left" label="EXCEL" (click)="exportExcel()" style="margin-right: 15px;" class="ui-button-success"></button>
+            <button type="button" pButton icon="pi pi-file-excel" iconPos="left" label="EXCEL" (click)="exportExcel()" style="margin-right: 15px; ; margin-bottom: 15px;" class="ui-button-success"></button>
             <input pInputText type="text" placeholder="Mã WiFi" style="margin-right: 15px; height: 30px; margin-bottom: 15px;"  (input)="tt.filter($event.target.value, 'mawifi', 'contains')">
                
             <input pInputText type="text"  placeholder="Họ Tên" style="margin-right: 15px; height: 30px; margin-bottom: 15px;" (input)="tt.filter($event.target.value, 'hoten', 'contains')">
