--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -26,6 +26,7 @@
 
               <ng-template pTemplate="header" let-columns class=" text-primary">
                 <tr>
+                  <th></th>
                   <th *ngFor="let col of columns" [pSortableColumn]="col.field">
 
 
@@ -40,9 +41,10 @@
                 </tr>
 
               </ng-template>
-              <ng-template pTemplate="body" let-rowData let-columns="columns" let-editing="editing" let-ri="rowIndex">
+              <ng-template let-i="rowIndex" pTemplate="body" let-rowData let-columns="columns" let-editing="editing" let-ri="rowIndex">
                 <tr [pEditableRow]="rowData">
-                  <td *ngFor="let col of columns">
+                  <td>{{i+1}}</td>
+                  <td *ngFor="let col of columns" >
 
 
                     <ng-container
