--- a/src/app/pages/user/user.component.html
+++ b/src/app/pages/user/user.component.html
@@ -43,7 +43,7 @@
               </div>
             </div>
           </div>
-          <div class=" row">
+          <!-- <div class=" row">
             <div class=" col-md-6 pr-md-1">
               <div class=" form-group">
                 <label> Ngày Thuê </label>
@@ -60,6 +60,19 @@
                   <p-calendar formControlName="ngaytra" [showIcon]="true" dateFormat="dd.mm.yy"></p-calendar>
                 </div>
               </div>
+            </div>
+          </div> -->
+          <div class=" form-group">
+            <label> Ngày Thuê </label>
+            <div>
+              <p-calendar formControlName="ngaythue" [showIcon]="true" dateFormat="dd.mm.yy">
+              </p-calendar>
+            </div>
+          </div>
+          <div class=" form-group">
+            <label>Ngày Trả</label>
+            <div>
+              <p-calendar formControlName="ngaytra" [showIcon]="true" dateFormat="dd.mm.yy"></p-calendar>
             </div>
           </div>
           <div class=" row">
