--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -11,9 +11,11 @@
           
           
           
-          <input pInputText type="text" placeholder="Mã WiFi" style="margin-right: 15px; height: 30px; margin-bottom: 15px;"  (input)="tt.filter($event.target.value, 'mawifi', 'contains')">
+          <input pInputText type="text" placeholder="Mã WiFi" style="margin-right: 15px; height: 30px; margin-bottom: 15px; width: 120px;"  (input)="tt.filter($event.target.value, 'mawifi', 'contains')">
+          <input pInputText type="text" placeholder="Mã SIM" style="margin-right: 15px; height: 30px; margin-bottom: 15px;  width: 120px;"  (input)="tt.filter($event.target.value, 'masim', 'contains')">
+          <input pInputText type="text" placeholder="DT SIM" style="margin-right: 15px; height: 30px; margin-bottom: 15px;  width: 120px;"  (input)="tt.filter($event.target.value, 'sdtsim', 'contains')">
                  
-          <input pInputText type="text"  placeholder="Họ Tên" style="margin-right: 15px; height: 30px; margin-bottom: 15px;" (input)="tt.filter($event.target.value, 'hoten', 'contains')">
+          <input pInputText type="text"  placeholder="Họ Tên" style="margin-right: 15px; height: 30px; margin-bottom: 15px;  width: 120px;" (input)="tt.filter($event.target.value, 'hoten', 'contains')">
           <p-dropdown  [options]="trangthaitt" (onChange)="onchange($event.value)" ></p-dropdown>       
           
           <!-- <div class=" table-responsive" style="margin-top: 15px;"> -->
