--- a/src/app/pages/wifi/wifi.component.html
+++ b/src/app/pages/wifi/wifi.component.html
@@ -11,7 +11,9 @@
                 
                         <button type="button" pButton icon="pi pi-file-excel" iconPos="left" label="EXCEL" (click)="exportExcel()" style="margin-left: 15px; margin-bottom: 15px; margin-right: 15px;" class="ui-button-success"></button>
         
-                        <input pInputText type="text" placeholder="Mã WiFi" style=" height: 30px; margin-bottom: 15px;"  (input)="tt.filter($event.target.value, 'mawifi', 'contains')">
+                        <input pInputText type="text" placeholder="Mã WiFi" style="margin-right: 15px; height: 30px; margin-bottom: 15px; width: 120px;"  (input)="tt.filter($event.target.value, 'mawifi', 'contains')">
+                        <input pInputText type="text" placeholder="Mã SIM" style="margin-right: 15px; height: 30px; margin-bottom: 15px; width: 120px;"  (input)="tt.filter($event.target.value, 'masim', 'contains')">
+                        <input pInputText type="text" placeholder="DT SIM" style="margin-right: 15px; height: 30px; margin-bottom: 15px; width: 120px;"  (input)="tt.filter($event.target.value, 'sdtsim', 'contains')">
            
                 </div>
                 </div>
