--- a/src/app/pages/user/user.component.html
+++ b/src/app/pages/user/user.component.html
@@ -31,13 +31,14 @@
           </div>
           <div class=" row">
             <div class=" col-md-6 pr-md-1">
-              <div class=" form-group">
+              <div class=" form-group" >
                 <label> Họ Tên </label> <label style="color: #ec250d;"> *</label>
                 <input class=" form-control" placeholder="Họ Tên" type="text" formControlName="hoten" />
               </div>
             </div>
+        
             <div class=" col-md-6 pl-md-1">
-              <div class=" form-group">
+              <div class=" form-group" >
                 <label> Facebook </label>
                 <input class=" form-control" placeholder="Facebook" type="email" formControlName="facebook" />
               </div>
@@ -62,10 +63,18 @@
               </div>
             </div>
           </div> -->
+          <div class=" row">
+            <div class=" col-md-12">
+              <div class=" form-group">
+                <label>Địa Chỉ </label>
+                <input class=" form-control" placeholder="Địa Chỉ" type="text" formControlName="diachi" />
+              </div>
+            </div>
+          </div>
           <div class=" form-group">
             <label> Ngày Thuê </label>
             <div>
-              <p-calendar formControlName="ngaythue" [showIcon]="true" dateFormat="dd.mm.yy">
+              <p-calendar [baseZIndex]="2000" formControlName="ngaythue" [showIcon]="true" dateFormat="dd.mm.yy">
               </p-calendar>
             </div>
           </div>
@@ -75,14 +84,7 @@
               <p-calendar formControlName="ngaytra" [showIcon]="true" dateFormat="dd.mm.yy"></p-calendar>
             </div>
           </div>
-          <div class=" row">
-            <div class=" col-md-12">
-              <div class=" form-group">
-                <label>Địa Chỉ </label>
-                <input class=" form-control" placeholder="Địa Chỉ" type="text" formControlName="diachi" />
-              </div>
-            </div>
-          </div>
+          
           <div class=" row">
             <div class=" col-md-4 pr-md-1">
               <div class=" form-group">
